basic logic scripts and style

--- a/osdc2012-int.html
+++ b/osdc2012-int.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>I'm Check-in in OSDC2012</title>
+    <meta name="viewport" content="initial-scale=1.0; maximum-scale=2.0;">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="main.js"></script>
-    <link type="stylesheet" href="style.css" />
+    <link media="all" type="text/css" href="style.css" rel="stylesheet">
     <style>
     </style>
 </head>
@@ -18,7 +19,7 @@
     <span id="at">at</span>
     <button id="btnCheckOut"><span class=""></span></button>
     <header><h1>ImCheck.in/<span class="mainUrl">osdc2012</span></h1></header>
-</aside>>
+</aside>
 
 <nav>
     <a href="/osdc2012-con2" class="left" title="第二會議室">＜</a>
@@ -27,8 +28,8 @@
 
 <div id="map">
     <header><h1>國際會議廳</h1></header>
-    <div id="standardPos" data-left="10px" data-top="10px" data-height="1000px" data-width="1500px">
-        <section id="s1" data-row="6" data-col="20" data-left="10px" data-top="10px" data-height="300px">
+    <div id="standardPos" data-left="10px" data-top="10px">
+        <section id="s1" data-row="6" data-col="10" data-left="50px" data-top="1100px" data-height="800px" data-width="600px">
         <!-- generate automatic
             <table>
                 <tr>
@@ -40,9 +41,12 @@
             </table>
         -->
         </section>
-        <section id="s2" data-row="6" data-col="20"></section>
-        <section id="s3" data-row="6" data-col="20"></section>
-    </dir>
+        <section id="s2" data-row="6" data-col="10" data-left="700px" data-top="1100px" data-height="800px" data-width="600px">
+        </section>
+        <section id="s3" data-row="6" data-col="10" data-left="1350px" data-top="1100px" data-height="800px" data-width="600px">
+        </section>
+        <img class="bkimg" src="./place_img/int-3f-hssb-sinica.png" width="2000" height="2036" alt="" />
+    </div>
 </div>
 
 <footer>Design...power...src</footer>
