add event on checkout button
Signed-off-by: Irvin <irvinfly@gmail.com>

--- a/osdc2012-int.html
+++ b/osdc2012-int.html
@@ -12,12 +12,12 @@
 </head>
 
 <!--url: imcheck.in/osdc2012-int -->
-<body id="hall-int"><!-- con2:第二會議室 int:國際會議廳 con1:第一會議室 --> 
+<body id="hall-int" data-hall="國際會議廳 Int."><!-- con2:第二會議室 int:國際會議廳 con1:第一會議室 --> 
 
 <aside>
     <input id="nick" type="text" name="txtNick" value="" placeholder="Nick Name" />
     <span id="at">at</span>
-    <button id="btnCheckOut"><span class=""></span></button>
+    <button id="checkOut"></button>
     <header><h1>ImCheck.in/<span class="mainUrl">osdc2012</span></h1></header>
 </aside>
 
@@ -27,9 +27,9 @@
 </nav>
 
 <div id="map">
-    <header><h1>國際會議廳</h1></header>
+    <!--<header><h1>國際會議廳</h1></header>-->
     <div id="standardPos" data-left="10px" data-top="10px">
-        <section id="s1" data-row="6" data-col="10" data-left="50px" data-top="1100px" data-height="800px" data-width="600px">
+        <section id="s1" data-row="6" data-col="10" data-left="50" data-top="1100" data-height="800" data-width="600">
         <!-- generate automatic
             <table>
                 <tr>
@@ -41,9 +41,9 @@
             </table>
         -->
         </section>
-        <section id="s2" data-row="6" data-col="10" data-left="700px" data-top="1100px" data-height="800px" data-width="600px">
+        <section id="s2" data-row="6" data-col="10" data-left="700" data-top="1100" data-height="800" data-width="600">
         </section>
-        <section id="s3" data-row="6" data-col="10" data-left="1350px" data-top="1100px" data-height="800px" data-width="600px">
+        <section id="s3" data-row="6" data-col="10" data-left="1350" data-top="1100" data-height="800" data-width="600">
         </section>
         <img class="bkimg" src="./place_img/int-3f-hssb-sinica.png" width="2000" height="2036" alt="" />
     </div>
